--- a/src/app/components/games-assigned/games-assigned.component.html
+++ b/src/app/components/games-assigned/games-assigned.component.html
@@ -156,6 +156,7 @@
                 <th>Mjesto</th>
                 <th>Natjecanje</th>
                 <th>Ekipe</th>
+                <th>Moja uloga</th>
                 <th>Sudački tim</th>
                 <th>Status</th>
                 <!-- <th>Rezultat</th> -->
